# prometheus_c_client

./: .gitignore  CMakeLists.txt  Makefile  README
include/: collector.h  config.h.in  counter.h  exporter.h  gauge.h  httpd.h  label.h  metric.h  prometheus.h  registry.h
src/: collector.c  counter.c  exporter.c  gauge.c  httpd.c  label.c  main.c  metric.c  registry.c
test/: main.c
